sandbox/output
TicketDispenserTest.java:5: error: cannot find symbol
    @Test
     ^
  symbol:   class Test
  location: class TicketDispenserTest
TicketDispenserTest.java:7: error: cannot find symbol
        assertEquals(1, 1);
        ^
  symbol:   method assertEquals(int,int)
  location: class TicketDispenserTest
2 errors
